[tool.poetry]
name = "statistics"
version = "0.1.0"
description = ""
authors = ["Tobias Ritter <tobias.ritter98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
