[project]
name = "statistics"
version = "0.1.0"
description = ""
authors = [
    {name = "Tobias Ritter", email = "tobias.ritter98@gmail.com"},
]
readme = "README.md"
dependencies = [
    "scikit-learn",
    "pandas",
    "pytest",
    "omnixai",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
